--- a/index.html
+++ b/index.html
@@ -25,9 +25,23 @@
 				<div class="col-lg-2 col-md-2 col-xs-12  my-md-4 ">
 					<a href="./index.html"><img src="./img/logonumber.png" class="" style="width: 60px;" alt=""></a>
 				</div>
-				<div class="col-lg-7 my-sm-3">
+				<div class="col-lg-8 my-sm-3">
 					<div class="row d-flex align-items-center justify-content-between">
-						<div class="col-lg-6 col-md-6">
+						<div class="col-md-1 col-xs-12 d-flex justify-content-between">
+							<div class="btn-group my-4">
+								<a type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+									aria-expanded="false" style="color: rgb(58, 58, 58);">
+									<span class="custom-icon custom-icon-flag-az"></span>
+								</a>
+								<div class="dropdown-menu">
+									<a class="dropdown-item" href="#">Az</a>
+									<a class="dropdown-item" href="#">Rus</a>
+									<a class="dropdown-item" href="#">Eng</a>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md-5">
 							<div class="row">
 								<div class="col-6">
 									<ul
@@ -37,9 +51,7 @@
 												class="text-decoration-none  d-flex align-items-center  py-2 px-3"
 												style="border: 1px solid #22BEA5;" data-toggle="modal"
 												data-target=".exampleModallogin">
-												<img src="./img/loginn.png" alt=""
-													style="width: 12px;margin-right: 5px;">
-												<span class="fs-lg-13  text-dark ">Daxil olun</span>
+												<span class="fs-lg-14 text-dark ">Daxil olun</span>
 											</a>
 										</li>
 										<div class="modal shadow rounded fade exampleModallogin  my-5 z-high fade in"
@@ -122,9 +134,8 @@
 												class="text-decoration-none d-flex align-items-center  py-2 px-3"
 												style="border: 1px solid #22BEA5;" data-toggle="modal"
 												data-target=".exampleModalsignup">
-												<img src="./img/user.png" alt=""
-													style="width: 15px; margin-right: 5px;">
-												<span class="fs-lg-13 text-dark ">Qeydiyyat</span>
+
+												<span class="fs-lg-14 text-dark ">Qeydiyyat</span>
 											</a>
 										</li>
 
@@ -235,7 +246,7 @@
 								</li>
 								<li>
 									<div class="hamburger hamburger--spring position-relative z-middle " id="open_menu"
-										style="top: -9px;">
+										style="top: -4px;">
 										<div class="hamburger-box">
 											<div class="hamburger-inner z-middle"></div>
 										</div>
@@ -459,7 +470,7 @@
 					</thead>
 					<tbody>
 						<tr class="desktop-view">
-							<td class="font-weight-bold">Azercell 50 2183472 <img src="./img/star.png" alt=""></td>
+							<td class="font-weight-bold">Azercell 50 2183472 <span class="custom-icon custom-icon-star"></span></td>
 							<td>1500AZN</td>
 							<td class="text-center">1200AZN</td>
 							<td>Müşfiq Əsədov (0502210176)</td>
@@ -471,7 +482,7 @@
 							</td>
 						</tr>
 						<tr class="desktop-view">
-							<td class="font-weight-bold">Azercell 50 2108907 <img src="./img/star.png" alt=""></td>
+							<td class="font-weight-bold">Azercell 50 2108907 <span class="custom-icon custom-icon-star"></span></td>
 							<td>1300 AZN</td>
 							<td class="text-center">1251 AZN</td>
 							<td>Müşfiq Əsədov (0502210176)</td>
@@ -483,9 +494,9 @@
 							</td>
 						</tr>
 						<tr class="desktop-view">
-							<td class="font-weight-bold">Azercell 50 2109114 <img src="./img/star.png" alt=""></td>
+							<td class="font-weight-bold">Azercell 50 2109114 <span class="custom-icon custom-icon-star"></span></td>
 							<td>1800 AZN</td>
-							<td class="text-center"><img src="./img/smile.png" alt=""></td>
+							<td class="text-center"><span class="custom-icon custom-icon-smile"></span></td>
 							<td>Müşfiq Əsədov (0502210176)</td>
 							<td class=""><a href="./ads.html"
 									class="text-decoration-none text-info effect-border">Reklam
@@ -495,9 +506,9 @@
 							</td>
 						</tr>
 						<tr class="desktop-view">
-							<td class="font-weight-bold">Azercell 50 9892222 <img src="./img/star.png" alt=""></td>
+							<td class="font-weight-bold">Azercell 50 9892222 <span class="custom-icon custom-icon-star"></span></td>
 							<td><strike>1100 AZN</strike></td>
-							<td class="text-center"><img src="./img/smile.png" alt=""></td>
+							<td class="text-center"><span class="custom-icon custom-icon-smile"></span></td>
 							<td>Müşfiq Əsədov (0502210176)</td>
 							<td class=""><a href="./ads.html"
 									class="text-decoration-none text-info effect-border">Reklam
@@ -507,7 +518,7 @@
 							</td>
 						</tr>
 						<tr class="desktop-view">
-							<td class="font-weight-bold">Azercell 50 2224453 <img src="./img/star.png" alt=""></td>
+							<td class="font-weight-bold">Azercell 50 2224453 <span class="custom-icon custom-icon-star"></span></td>
 							<td>500AZN</td>
 							<td class="text-center">1200AZN</td>
 							<td>Müşfiq Əsədov (0502210176)</td>
@@ -519,9 +530,9 @@
 							</td>
 						</tr>
 						<tr class="desktop-view">
-							<td class="font-weight-bold">Azercell 50 2229371 <img src="./img/star.png" alt=""></td>
+							<td class="font-weight-bold">Azercell 50 2229371 <span class="custom-icon custom-icon-star"></span></td>
 							<td><strike>300 AZN</strike></td>
-							<td class="text-center"><img src="./img/smile.png" alt=""></td>
+							<td class="text-center"><span class="custom-icon custom-icon-smile"></span></td>
 							<td>Müşfiq Əsədov (0502210176)</td>
 							<td class=""><a href="./ads.html"
 									class="text-decoration-none text-info effect-border">Reklam
@@ -531,9 +542,9 @@
 							</td>
 						</tr>
 						<tr class="desktop-view">
-							<td class="font-weight-bold">Azercell 50 2668666 <img src="./img/star.png" alt=""></td>
+							<td class="font-weight-bold">Azercell 50 2668666 <span class="custom-icon custom-icon-star"></span></td>
 							<td>3000 AZN</td>
-							<td class="text-center"><img src="./img/smile.png" alt=""></td>
+							<td class="text-center"><span class="custom-icon custom-icon-smile"></span></td>
 							<td>Müşfiq Əsədov (0502210176)</td>
 							<td class=""><a href="./ads.html"
 									class="text-decoration-none text-info effect-border">Reklam
@@ -543,7 +554,7 @@
 							</td>
 						</tr>
 						<tr class="desktop-view">
-							<td class="font-weight-bold">Azercell 50 2224342<img src="./img/star.png" alt=""></td>
+							<td class="font-weight-bold">Azercell 50 2224342<span class="custom-icon custom-icon-star"></span></td>
 							<td><strike>1500 AZN</strike></td>
 							<td class="text-center">1000 AZN</td>
 							<td>Müşfiq Əsədov (0502210176)</td>
@@ -555,7 +566,7 @@
 							</td>
 						</tr>
 						<tr class="desktop-view">
-							<td class="font-weight-bold">Azercell 50 2102976<img src="./img/star.png" alt=""></td>
+							<td class="font-weight-bold">Azercell 50 2102976<span class="custom-icon custom-icon-star"></span></td>
 							<td><strike>1300 AZN</strike></td>
 							<td class="text-center">1300 AZN</td>
 							<td>Müşfiq Əsədov (0502210176)</td>
@@ -567,7 +578,7 @@
 							</td>
 						</tr>
 						<tr class="desktop-view">
-							<td class="font-weight-bold">Azercell 50 2183472 <img src="./img/star.png" alt=""></td>
+							<td class="font-weight-bold">Azercell 50 2183472 <span class="custom-icon custom-icon-star"></span></td>
 							<td>1500AZN</td>
 							<td class="text-center">1200AZN</td>
 							<td>Müşfiq Əsədov (0502210176)</td>
@@ -655,7 +666,6 @@
 								</div>
 							</div>
 						</div>
-
 					</div>
 					<div class="col-sm-6 mb-4 ">
 						<div class=" card text-center">
@@ -1218,20 +1228,20 @@
 				<div class="col-lg-4 justify-content-start pt-4">
 					<ul>
 						<li><a href="#" class="text-white font-weight-bold text-decoration-none">www.nömrə.net</a></li>
-						<li class="dropdown d-sm-none align-items-center my-4 d-md-flex">
-							<a class="dropdown-toggle text-decoration-none text-white" data-toggle="dropdown" href="#"
-								aria-expanded="false"><img src="./img/azerbaijan.png" alt="" style="width: 20px;"
-									class="">
-							</a>
-							<ul class="dropdown-menu px-2 dropdown-user">
-								<li><a href="#" class="text-decoration-none text-muted fs-lg-13">
-										Az</a>
-								</li>
-								<li><a href="#" class="text-decoration-none text-muted fs-lg-13">
-										Rus</a>
-								</li>
+						<li class=" d-sm-none align-items-center my-4 d-md-flex">
+							<!-- Example single danger button -->
+							<div class="btn-group">
+								<a type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+									aria-expanded="false" style="color: white;">
+									<span class="custom-icon custom-icon-flag-az"></span>
+								</a>
+								<div class="dropdown-menu">
+									<a class="dropdown-item" href="#">Az</a>
+									<a class="dropdown-item" href="#">Rus</a>
+									<a class="dropdown-item" href="#">Eng</a>
 
-							</ul>
+								</div>
+							</div>
 						</li>
 					</ul>
 
