--- a/payment.html
+++ b/payment.html
@@ -24,9 +24,9 @@
 				<div class="col-md-2 col-xs-12  my-md-4 ">
 					<a href="./index.html"><img src="./img/logonumber.png" class="" style="width: 60px;" alt=""></a>
 				</div>
-				<div class="col-md-4 col-xs-12 ">
+				<div class="col-md-6 col-xs-12 ">
 					<div class="row d-flex justify-content-between align-items-center mb-md-4 ">
-						<div class="col-8">
+						<div class="col-6 ">
 							<a href="./" class="text-decoration-none" data-toggle="modal"
 								data-target=".exampleModalsignup">
 
@@ -36,8 +36,24 @@
 								</button>
 							</a>
 						</div>
-						<div class="col-3">
-							<div class="hamburger hamburger--spring position-relative z-middle " id="open_menu"
+						<div class="col-2 d-flex justify-content-center">
+							<ul class="nav py-profile justify-content-end">
+								<li class="nav-item dropdown">
+									<a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle1"
+										role="button" aria-haspopup="true" aria-expanded="false" >
+										<i class="fas fa-user text-purple fs-lg-20"></i>
+									</a>
+									
+									<div class="dropdown-menu dropdown-menu-right">
+										<a href="#" class="dropdown-item">Profil</a>
+										<a href="#" class="dropdown-item">Çıxış</a>
+									</div>
+								</li>
+							</ul>
+
+						</div>
+						<div class="col-2">
+							<div class="hamburger hamburger--spring position-relative z-middle" id="open_menu"
 								style="top: -9px;">
 								<div class="hamburger-box">
 									<div class="hamburger-inner z"></div>
